# software-installation-experience

./: README.md
test_casadi_example/: CMakeLists.txt  main.cpp
test_ipopt_example/: CMakeLists.txt
